vlib/v/checker/tests/cast_string_err.vv
struct Abc {
	x int
}

type Sumtype = int | u64

enum MyEnum {
	val1
	val2
}

fn main() {
	ev := MyEnum.val1
	sev := string(ev)
	println(sev)
	//
	st := Sumtype(int(456))
	sst := string(st)
	println(sst)
	//
	abc := Abc{}
	sabc := string(abc)
	println(sabc)
	//
	mm := map[string]int{}
	sm := string(mm)
	println(sm)
	//
	arr := []u8{}
	sa := string(arr)
	println(sa)
	//
	ii := 1
	si := string(ii)
	println(si)
}
